plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Valid
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'

    //Login
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    //websocket
    implementation('org.springframework.boot:spring-boot-starter-websocket')

    //Swagger
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'

    // stomp
    implementation 'org.webjars:stomp-websocket:2.3.4'

    implementation 'org.webjars:sockjs-client:1.5.1'

    //AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.1.0'

    //hateoas 설정
    implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.1.2.RELEASE'







}

tasks.named('test') {
    useJUnitPlatform()
}
